# Clippr

./: .env  .gitignore  Cargo.toml  demo.txt  readme.md  sql-querr.txt
backend/: Cargo.toml
backend/src/: main.rs
backend/src/routes/: asset.rs  balance.rs  jupiter.rs  mod.rs  solana.rs  user.rs
indexer/: Cargo.toml
indexer/migrations/: 001_initial_schema.sql
indexer/src/: config.rs  database.rs  main.rs  models.rs  registry.rs  routes.rs  subscriber.rs  yellowstone.rs
mpc/: Cargo.toml
mpc-simple/: Cargo.toml
mpc-simple/src/: database.rs  main.rs  models.rs
mpc-simple/src/routes/: aggregate_keys.rs  generate.rs  jupiter_swap.rs  mod.rs  send_sol.rs
mpc/src/: crypto.rs  database.rs  main.rs  models.rs  serialization.rs  simple_mpc.rs  tss.rs
mpc/src/routes/: aggregate_keys.rs  generate.rs  mod.rs  mpc_protocol.rs  send_single.rs
store/: Cargo.toml
store/src/: asset.rs  balance.rs  error.rs  helper.rs  lib.rs  quote.rs  user.rs
