[package]
name = "indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core async runtime
tokio = { version = "1.47.1", features = ["full"] }

# gRPC and Yellowstone
tonic = "0.14.2"
tonic-health = "0.14.2"
yellowstone-grpc-proto = "9.0.0"
yellowstone-grpc-client = "9.0.0"
bs58 = "0.5.0"
rand = "0.8.5"

# Web server
actix-web = "4.11.0"

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros", "migrate", "rust_decimal"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
thiserror = "2.0"
anyhow = "1.0"
bytes = "1.10.1"
futures = "0.3.31"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
rust_decimal = { version = "1.32", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Solana
solana-sdk = "3.0.0"
