[package]
name = "mpc-simple"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-sdk = "3.0.0"
solana-client = "3.0.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros", "migrate"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
actix-web = "4.11.0"
tokio = "1.47.1"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
bs58 = "0.5"
hex = "0.4"
solana-program = "3.0.0"
